--- a/intro.html
+++ b/intro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="website icon" type="png" href="image/snake.png">
+    <link rel="website icon" type="png" href="/snake.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -16,7 +16,7 @@
 <body>
     <div class="box-slider">
         <div class="slider1">
-            <img src="image/bgr.jpg" alt="">
+            <img src="/bgr.jpg" alt="">
             <div class="happynewyear">
                 <div class="textHappynewyear">
                     <div class="box-span">
@@ -41,10 +41,10 @@
             </div>
             <div class="box-slider_img1">
                 <div class="slider-img1">
-                    <img src="image/circular-pattern.png" alt="">
+                    <img src="/circular-pattern.png" alt="">
                 </div>
                 <div class="pattern">
-                    <img src="image/pattern.png" alt="">
+                    <img src="/pattern.png" alt="">
                 </div>
             </div>
             <div class="circle">
@@ -52,22 +52,22 @@
             </div>
             <div class="box-flower">
                 <div class="flower-img">
-                    <img src="image/flower.png" alt="">
+                    <img src="/flower.png" alt="">
                 </div>
                 <div class="flower-img">
-                    <img src="image/flower.png" alt="">
+                    <img src="/flower.png" alt="">
                 </div>
                 <div class="flower-img">
-                    <img src="image/flower1.png" alt="">
+                    <img src="/flower1.png" alt="">
                 </div>
                 <div class="flower-img">
-                    <img src="image/flower1.png" alt="">
+                    <img src="/flower1.png" alt="">
                 </div>
                 <div class="flower-img">
-                    <img src="image/flower2.png" alt="">
+                    <img src="/flower2.png" alt="">
                 </div>
                 <div class="flower-img">
-                    <img src="image/flower2.png" alt="">
+                    <img src="/flower2.png" alt="">
                 </div>
             </div>
             <div class="box-slider_img2">
@@ -83,30 +83,30 @@
                 </div>
                 <div class="box-slider-img4">
                     <div class="slider-img4">
-                        <img src="image/lanterns.png" alt="">
+                        <img src="/lanterns.png" alt="">
                     </div>
                 </div>
                 <div class="box-slider-img5">
                     <div class="slider-img5">
-                        <img src="image/lanterns.png" alt="">
+                        <img src="/lanterns.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="slider-img6">
-                <img src="image/cloud-red1.png" alt="">
-                <img src="image/cloud-red2.png" alt="">
-                <img src="image/cloud-red2.png" alt="">
+                <img src="/cloud-red1.png" alt="">
+                <img src="/cloud-red2.png" alt="">
+                <img src="/cloud-red2.png" alt="">
             </div>
             <div class="box-lion_dance">
                 <div class="lion_dance1">
-                    <img src="image/Lion-dance.gif" alt="">
+                    <img src="/Lion-dance.gif" alt="">
                 </div>
                 <div class="lion_dance2">
-                    <img src="image/Lion-dance2.gif" alt="">
+                    <img src="/Lion-dance2.gif" alt="">
                 </div>
             </div>
             <div class="cat">
-                <img src="image/snake.png" alt="">
+                <img src="/snake.png" alt="">
             </div>
             <div class="box-number">
                 <div class="number2023">
@@ -126,38 +126,38 @@
             </div>
             <div class="box-rim">
                 <div class="rim1">
-                    <img src="image/rim1.png" alt="">
+                    <img src="/rim1.png" alt="">
                 </div>
                 <div class="rim2">
-                    <img src="image/rim1.png" alt="">
+                    <img src="/rim1.png" alt="">
                 </div>
             </div>
             <div class="box-texture_clouds">
                 <div class="texture_clouds1">
-                    <img src="image/texture-clouds.png" alt="">
+                    <img src="/texture-clouds.png" alt="">
                 </div>
                 <div class="texture_clouds1">
-                    <img src="image/texture-clouds.png" alt="">
+                    <img src="/texture-clouds.png" alt="">
                 </div>
                 <div class="texture_clouds1">
-                    <img src="image/texture-clouds.png" alt="">
+                    <img src="/texture-clouds.png" alt="">
                 </div>
                 <div class="texture_clouds1">
-                    <img src="image/texture-clouds.png" alt="">
+                    <img src="/texture-clouds.png" alt="">
                 </div>
                 <div class="texture_clouds1">
-                    <img src="image/texture-clouds.png" alt="">
+                    <img src="/texture-clouds.png" alt="">
                 </div>
             </div>
             <div class="box-big_clouds">
                 <div class="big_clouds1">
-                    <img src="image/big-clouds1.png" alt="">
+                    <img src="/big-clouds1.png" alt="">
                 </div>
                 <div class="big_clouds2">
-                    <img src="image/big-clouds2.png" alt="">
+                    <img src="/big-clouds2.png" alt="">
                 </div>
                 <div class="big_clouds3">
-                    <img src="image/big-clouds3.png" alt="">
+                    <img src="/big-clouds3.png" alt="">
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
             <div class="rhombus"></div>
             <div class="rhombus"></div>
             <div class="rhombus-img">
-                <img src="image/2.jpg" alt="">
+                <img src="/2.jpg" alt="">
             </div>
             <div class="mail">
                 <button><i class="fa-regular fa-envelope"></i></button>
@@ -175,26 +175,26 @@
         <div class="slider3">
             <div class="box-content">
                 <div class="left">
-                    <img src="image/bg1.jpg" alt="">
+                    <img src="/bg1.jpg" alt="">
                     <div class="center">
 
                     </div>
                     <div class="lanterns-content">
-                        <img src="image/lanterns.png" alt="">
+                        <img src="/lanterns.png" alt="">
                     </div>
                     <div class="box-big_flowers">
-                        <img src="image/big-flower.png" alt="">
-                        <img src="image/big-flower.png" alt="">
-                        <img src="image/big-flower.png" alt="">
-                        <img src="image/big-flower1.png" alt="">
-                        <img src="image/big-flower1.png" alt="">
-                        <img src="image/big-flower2.png" alt="">
-                        <img src="image/big-flower2.png" alt="">
-                        <img src="image/big-flower2.png" alt="">
+                        <img src="/big-flower.png" alt="">
+                        <img src="/big-flower.png" alt="">
+                        <img src="/big-flower.png" alt="">
+                        <img src="/big-flower1.png" alt="">
+                        <img src="/big-flower1.png" alt="">
+                        <img src="/big-flower2.png" alt="">
+                        <img src="/big-flower2.png" alt="">
+                        <img src="/big-flower2.png" alt="">
                     </div>
                     <div class="box-circle_left">
                         <div class="circle_left">
-                            <img src="image/circular-pattern.png" alt="">
+                            <img src="/circular-pattern.png" alt="">
                             <div class="text-content">
                                 <h2>Happy New</h2>
                                 <h1>Year</h1>
@@ -203,12 +203,12 @@
                         </div>
                     </div>
                     <div class="apricot_blossom">
-                        <img src="image/apricot-blossom.png" alt="">
-                        <img src="image/apricot-blossom.png" alt="">
-                        <img src="image/apricot-blossom.png" alt="">
-                        <img src="image/apricot-blossom.png" alt="">
-                        <img src="image/apricot-blossom.png" alt="">
-                        <img src="image/apricot-blossom.png" alt="">
+                        <img src="/apricot-blossom.png" alt="">
+                        <img src="/apricot-blossom.png" alt="">
+                        <img src="/apricot-blossom.png" alt="">
+                        <img src="/apricot-blossom.png" alt="">
+                        <img src="/apricot-blossom.png" alt="">
+                        <img src="/apricot-blossom.png" alt="">
                     </div>
                 </div>
                 <div class="right">
@@ -233,7 +233,7 @@
     </div>
 
     <audio id="song">
-        <source src="image/nhac.mp3" type="audio/mp3">
+        <source src="/nhac.mp3" type="audio/mp3">
     </audio>
 
     <script src="intro.js"></script>
