--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="right">
                     <div class="content">
                         <div class="title">
-                            <h1>&#129505Đầu Năm!</h1>
+                            <h1>Đầu Năm!</h1>
                         </div>
                         <p>
                             Chúc cô và gia đình sức khỏe dồi dào, hạnh phúc viên mãn, vạn sự như ý, tỉ sự như mơ, triệu
