--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="website icon" type="png" href="snake.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="website icon" type="png" href="snake.png">
     <link rel="stylesheet" href="intro.css">
     <title>Happy New Year 2025</title>
+
+    <style>
+        @media (max-width: 768px) {
+            .textHappynewyear {
+                font-size: 20px;  /* Điều chỉnh kích thước font cho màn hình nhỏ */
+                color: #fff;      /* Đảm bảo màu chữ dễ nhìn */
+                text-align: center; /* Căn giữa chữ */
+            }
+        }
+    </style>
 </head>
 
 <body>
