--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 <img src="cloud-red1.png" alt="">
                 <img src="cloud-red2.png" alt="">
                 <img src="cloud-red2.png" alt="">
+                <img src="cloud-red1.png" alt="">
             </div>
             <div class="box-lion_dance">
                 <div class="lion_dance1">
